--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python learning
     </title>
-    Python learning
+    <link rel="stylesheet" href="somefont.css">
 </head>
 <body>
     
