--- a/calc.html
+++ b/calc.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python learning
-    </title>
-    <link rel="stylesheet" href="somefont.css">
+    <title>Document</title>
 </head>
 <body>
+2*2 =4
 </body>
 </html>
